Se solucionaronn algunos asuntos de prueba estatica